# AgentCheck

./: .env.example  .gitignore  CLAUDE.md  FirstPart.py  README.md  README_Security.md  actual_agents.py  adapters.py  agent_registry.py  agent_template.py  analyzer.py  downgrade_tester.py  dummy_agents.py  evaluator.py  execution_log.json  generator.py  global_analytics.json  main.py  pyproject.toml  requirements.txt  sandbox_runner.py  usage_tracker.py  utils.py
Security_agent/: AGENT.md  Auditor.py
Security_agent/src/: scanner.py  utils.py
agentcheck/: __init__.py  cli.py  orchestrator.py
agentcheck/alternatives/: __init__.py  alternatives_engine.py  check_runner.py  kb_loader.py  kb_refresher.py  matching_engine.py  models.py  profile_loader.py  reporter.py  scorer.py  validation.py  verdict.py
agentcheck/efficiency/: __init__.py  analyzer.py  downgrade_tester.py  pricing.yaml  reporter.py  runner.py  sandbox_runner.py
agentcheck/quality/: __init__.py  adapters.py  evaluator.py  generator.py  registry.py  runner.py  template.py
agentcheck/security/: __init__.py  attack_library.yaml  auditor.py  risk_classifier.py  runner.py
agentcheck/shared/: __init__.py  models.py  openrouter_client.py  results_io.py
context/: AgentCheck_SDD_v0.1.md  AgentCheck_SDD_v0.2_Wastefulness.md  AgentCheck_SDD_v0.3_Security.md  AgentCheck_SDD_v0.4_Alternatives.md
scripts/: refresh_kb.py
tests/: conftest.py  test_cli.py
tests/alternatives/: test_empirical_flow.py  test_framework_shift.py  test_full_flow.py  test_honesty.py  test_kb_refresher.py  test_overall_score.py  (+3 more)
(+19 files in other folders)
